Logo type changed from jpeg to png

--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <img src="assets/logo.jpeg" alt="S Seths Consultancy Logo" class="logo">
+        <img src="assets/Logo.png" alt="S Seths Consultancy Logo" class="logo">
         <h1>S Seths Consultancy</h1>
         <nav>
             <ul>
