--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <img src="assets/logo.jpeg" alt="S Seths Consultancy Logo" class="logo">
+        <img src="assets/logo.png" alt="S Seths Consultancy Logo" class="logo">
         <h1>S Seths Consultancy</h1>
         <nav>
             <ul>
