--- a/about.html
+++ b/about.html
@@ -17,37 +17,43 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Us</a></li>
-                <li class="dropdown">
+                <li><a href="services.html">Services</a></li>
+                <!-- <li class="dropdown">
                     <a href="#" class="dropbtn">Services</a>
                     <div class="dropdown-content">
-                            <a href="contact.html">Dissertation Writing Services</a>
-                            <a href="contact.html">Essay Writing Services</a>
-                            <a href="contact.html">Assignment Editing Services</a>
-                            <a href="contact.html">Write My Assignment</a>
-                            <a href="contact.html">University Assignment Help</a>
-                            <a href="contact.html">College Assignment</a>
-                            <a href="contact.html">Writing Case Study</a>
-                            <a href="contact.html">Research Report Writing</a>
-                            <a href="contact.html">Capstone Project Writing</a>
+                        <a href="#">Dissertation Writing Services</a>
+                        <a href="#">Essay Writing Services</a>
+                        <a href="#">Assignment Editing Services</a>
+                        <a href="#">Write My Assignment</a>
                     </div>
-                </li>
+                </li> -->
                 <li><a href="contact.html">Contact Us</a></li>
             </ul>
         </nav>
     </header>
 
     <!-- Introduction Section -->
-    <section class="about-intro">
+    <section class="about-intro section">
         <div class="container">
-          <h1>About Us</h1> 
+            <h1 style="padding-top: 60px;">About Us</h1>
             <p>
-                At S Seths Consultancy, we specialize in helping international students excel academically by providing expert assistance with assignments, presentations, and projects. We pride ourselves on offering personalized support and ensuring the highest quality of work.
+                Welcome to S Seth Consultancy!
+
+Founded in 2017 in Pune, Maharashtra, S Seth Consultancy has emerged as a trusted partner for students and professionals seeking high-quality assignment writing services across the globe. Our mission is to empower individuals by providing them with the tools they need to succeed academically and professionally. <br>
+
+At S Seth Consultancy, we understand the challenges that come with rigorous academic demands and tight deadlines. Our team of experienced writers and subject matter experts is dedicated to delivering customized, well-researched assignments tailored to meet the unique needs of each client. Whether you're pursuing a degree in the arts, sciences, or business, we have the expertise to help you excel.<br>
+
+Our commitment to quality, integrity, and timely delivery sets us apart in the competitive landscape of assignment writing services. We pride ourselves on maintaining open communication with our clients, ensuring that every project aligns with your specific requirements and academic standards.<br>
+
+With clients spanning various countries, our multicultural team is adept at navigating diverse academic environments, making us a global leader in assignment assistance. We are passionate about fostering a supportive and enriching experience for our clients, helping them overcome obstacles and achieve their educational goals.<br>
+
+Join the S Seth Consultancy family today and take the first step towards academic success!
             </p>
         </div>
     </section>
 
     <!-- Company Values Section -->
-    <section class="company-values">
+    <section class="company-values section">
         <div class="container">
             <h2>Our Core Values</h2>
             <div class="values-grid">
@@ -67,10 +73,8 @@
         </div>
     </section>
 
-   
-
     <!-- Call to Action Section -->
-    <section class="cta-section">
+    <section class="cta-section section">
         <div class="container">
             <h2>Ready to Work With Us?</h2>
             <p>Get in touch today to find out how we can help you achieve academic success.</p>
@@ -80,4 +84,3 @@
 
 </body>
 </html>
-
