--- a/contact.html
+++ b/contact.html
@@ -9,13 +9,15 @@
 </head>
 <body>
     <header>
-        <img src="assets/Logo.png" alt="S Seths Consultancy Logo" class="logo">
+        <a href="index.html"><img src="assets/Logo.png" alt="S Seths Consultancy Logo" class="logo"></a>
         
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Us</a></li>
+                <li><a href="services.html">Services</a></li>
                 <li><a href="contact.html">Contact Us</a></li>
+                
             </ul>
         </nav>
     </header>
@@ -34,6 +36,14 @@
                 <input type="email" id="email" name="email" placeholder="Enter your email" required>
             </div>
             <div class="form-group">
+                <label for="Number">Contact Number</label>
+                <input type="text" id="number" name="number" placeholder="Enter your number" required>
+            </div>
+            <div class="form-group">
+                <label for="Course">Your Course</label>
+                <input type="text" id="Course" name="Course" placeholder="Enter your Course" required>
+            </div>
+            <div class="form-group">
                 <label for="message">Your Message</label>
                 <textarea id="message" name="message" placeholder="Write your message" required></textarea>
             </div>
@@ -44,9 +54,9 @@
     <!-- Footer with Contact Info -->
     <footer>
         <div class="footer-info">
-            <p>Contact No: +91-123-456-7890</p>
-            <p>Email: contact@sethsconsultancy.com</p>
-            <p>Address: 123 Academic Way, Int    ernational City, Country</p>
+            <p>Contact No: +91-9522249133</p>
+            <p>Email: s.salesassignments@gmail.com</p>
+            <p>Address: Pune, Maharashtra</p>
         </div>
         <p>&copy; 2024 S Seths Consultancy. All Rights Reserved.</p>
     </footer>
