--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
     </header>
 
     <section id="contact">
-        <h2>Get in Touch with Us</h2>
+        <h2 style="padding-top: 60px; padding-right: 10px;" >Get in Touch with Us</h2>
         <p>We would love to hear from you! Please fill out the form below to reach out to us.</p>
         
         <form id="contact-form" action="#" method="POST">
