--- a/services.html
+++ b/services.html
@@ -26,7 +26,7 @@
     <!-- Services Section -->
     <section class="services-section">
         <div class="container">
-            <h1>Our Services</h1>
+            <h1 style="padding-top: 60px;">Our Services</h1>
             <p>Explore the wide range of academic services we offer to help students achieve their goals.</p>
 
             <div class="services-grid">
