--- a/index.html
+++ b/index.html
@@ -109,6 +109,14 @@
                 <div id="email-error" class="error"></div>
             </div>
             <div class="form-group">
+                <label for="Number">Contact Number</label>
+                <input type="text" id="number" name="number" placeholder="Enter your number" required>
+            </div>
+            <div class="form-group">
+                <label for="Course">Your Course</label>
+                <input type="text" id="Course" name="Course" placeholder="Enter your Course" required>
+            </div>
+            <div class="form-group">
                 <label for="message">Your Message</label>
                 <textarea id="message" name="message" placeholder="Write your message" required></textarea>
                 <div id="message-error" class="error"></div>
