--- a/services.html
+++ b/services.html
@@ -58,14 +58,13 @@
         </div>
     </section>
 
-    <footer>
-        <div class="footer-info">
-            <p>Contact No: +91-9522249133</p>
-            <p>Email: s.salesassignments@gmail.com</p>
-            <p>Address: Pune, Maharashtra</p>
+    <section class="cta-section section">
+        <div class="container">
+            <h2>Ready to Work With Us?</h2>
+            <p>Get in touch today to find out how we can help you achieve academic success.</p>
+            <a href="contact.html" class="cta-button">Contact Us</a>
         </div>
-        <p>&copy; 2024 S Seths Consultancy. All Rights Reserved.</p>
-    </footer>
+    </section>
 
 </body>
 </html>
