--- a/contact.html
+++ b/contact.html
@@ -15,8 +15,8 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Us</a></li>
-                <li><a href="services.html">Services</a></li>
-                <li><a href="contact.html">Contact Us</a></li>
+                <li><a href="services.html" >Services</a></li>
+                <li><a href="contact.html" >Contact Us</a></li>
                 
             </ul>
         </nav>
@@ -47,7 +47,7 @@
                 <label for="message">Your Message</label>
                 <textarea id="message" name="message" placeholder="Write your message" required></textarea>
             </div>
-            <button type="submit" class="submit-btn">Send Message</button>
+            <button type="submit" class="submit-btn"><a href="index.html" style="text-decoration: none;"> Send Message </a></button> 
         </form>
     </section>
 
