--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
             <a href="index.html"><img src="assets/Logo.png" alt="S Seths Consultancy Logo" class="logo"></a>
             <nav>
                 <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About Us</a></li>
-                    <li><a href="services.html">Services</a></li>
+                    <li><a href="index.html" style="color: whitesmoke;">Home</a></li>
+                    <li><a href="about.html" style="color: whitesmoke;">About Us</a></li>
+                    <li><a href="services.html" style="color: whitesmoke;">Services</a></li>
 
                     <!-- <li class="dropdown">
                         <a href="#" class="dropbtn">Services</a>
@@ -33,7 +33,7 @@
                             <a href="contact.html">Capstone Project Writing</a>
                         </div>
                     </li> -->
-                    <li><a href="contact.html">Contact Us</a></li>
+                    <li><a href="contact.html" style="color: whitesmoke;">Contact Us</a></li>
                 </ul>
             </nav>
         </header>
@@ -121,7 +121,7 @@
                 <textarea id="message" name="message" placeholder="Write your message" required></textarea>
                 <div id="message-error" class="error"></div>
             </div>
-            <button type="submit" class="submit-btn">Send Message</button>
+            <button type="submit" class="submit-btn"><a href="index.html" style="text-decoration: none;"> Send Message </a></button> 
         </form>
     </section>
     
@@ -138,3 +138,4 @@
     </footer>
 </body>
 </html>
+
